--- a/src/frontend/scss/site.scss
+++ b/src/frontend/scss/site.scss
@@ -6,9 +6,6 @@ html, body {
 
 body {
     background-color: $light;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 .person-list {
@@ -17,6 +14,13 @@ body {
 }
 
 .login-form-container {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+}
+
+.login-form-content {
     @extend .card;
     @extend .p-3;
     width: 24rem;
@@ -26,4 +30,51 @@ body {
 }
 .login-form {
     @extend .card-body;
+}
+
+.login-buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+.forum-view {
+    @extend .container-fluid;
+    height: 100%;
+    > .row {
+        height: 100%;
+    }
+}
+
+.thread-list {
+    @extend .col-1;
+    @extend .p-0;
+    @extend .border-right;
+    min-width: 300px;
+    height: 100%;
+    background-color: $white;
+}
+
+.thread-list-header {
+    @extend .p-3;
+    @extend .mb-3;
+    @extend .border-bottom;
+    background-color: $light;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.thread-list-content {
+}
+
+.thread-view {
+    @extend .col;
+    height: 100%;
+}
+
+.no-thread-selected {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    justify-content: center;
 }
