Make error slightly better

--- a/src/frontend/scss/site.scss
+++ b/src/frontend/scss/site.scss
@@ -40,6 +40,8 @@ body {
 .login-error {
     @extend .alert;
     @extend .alert-danger;
+    @extend .mt-3;
+    @extend .mb-0;
 }
 
 .forum-view {
